[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unique_symbols_vlad"
version = "0.0.1"
authors = [
  { name="Vladyslav Dzhulai", email="test@testtesttest.com" },
]
description = "Package helps to count the quantity of unique symbols using a comand line"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
